syntax = "proto3";

package manga;

option go_package = "./proto";

// MangaService provides internal manga operations
service MangaService {
  rpc GetManga(GetMangaRequest) returns (MangaResponse);
  rpc SearchManga(SearchRequest) returns (SearchResponse);
  rpc UpdateProgress(UpdateProgressRequest) returns (UpdateProgressResponse);
}

message GetMangaRequest {
  string manga_id = 1;
}

message MangaResponse {
  string id = 1;
  string title = 2;
  string author = 3;
  repeated string genres = 4;
  string status = 5;
  int32 total_chapters = 6;
  string description = 7;
  string cover_url = 8;
  int32 year = 9;
}

message SearchRequest {
  string query = 1;
  string genre = 2;
  string status = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message SearchResponse {
  repeated MangaResponse mangas = 1;
  int32 total_count = 2;
}

message UpdateProgressRequest {
  string user_id = 1;
  string manga_id = 2;
  int32 chapter = 3;
}

message UpdateProgressResponse {
  bool success = 1;
  string message = 2;
  int32 current_chapter = 3;
  int64 updated_at = 4;
}